--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
+    <script defer src="./main.js"></script>
+    <link  rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Game of life</h1>
+    </header>
+    <section class="display-canvas">
+        <div class="container">
+            <canvas id="Board"></canvas>
+        </div>
+    </section>
 </body>
 </html>
