--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
-    <script defer src="./main.js"></script>
+    <script defer src="./main.js" type="module"></script>
     <link  rel="stylesheet" href="./styles.css">
 </head>
 <body>
