--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
     <link  rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header>
-        <h1>Game of life</h1>
-    </header>
     <section class="display-canvas">
+        <header>
+            <h1>Game of life</h1>
+        </header>
         <div class="container">
             <canvas id="Board"></canvas>
         </div>
+        <footer>
+            <p>Setings</p>
+            <div>
+                <button>btn</button>
+                <button>btn</button>
+                <button>btn</button>
+            </div>
+        </footer>
     </section>
 </body>
 </html>
