minor changes for a first release

--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
             <canvas id="Board"></canvas>
         </div>
         <footer>
-            <p>Setings</p>
-            <div>
-                <button>btn</button>
-                <button>btn</button>
-                <button>btn</button>
-            </div>
+            <p>Future changes are coming.</p>
+            <p>This canvas is set in toroidal mode.</p>
         </footer>
     </section>
 </body>
