--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
-    <script defer src="./main.js" type="module"></script>
+    <script defer src="./js/main.js" type="module"></script>
     <link  rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -16,8 +16,25 @@
             <canvas id="Board"></canvas>
         </div>
         <footer>
-            <p>Future changes are coming.</p>
             <p>This canvas is set in toroidal mode.</p>
+            <div class="container" id="c-2">
+                <div class="btn-container" id="btn-c-1">
+                    <button><img src="./sources/settings1.svg"></button>
+                    <button><img src="./sources/brush-1.svg"></button>
+                </div>
+                <div class="btn-container" id="btn-c-2">
+                    <button>
+                        <img src="./sources/play.svg" style="display: none;">
+                        <img src="./sources/pause.svg">
+                    </button>
+                    <button><img src="./sources/next.svg"></button>
+                    <div id="vel-dial">
+                        <span>Velocity</span>
+                        <input type="range"></input>
+                    </div>
+                    <button><img src="./sources/random.svg"></button>
+                </div>
+            </div>
         </footer>
     </section>
 </body>
