--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
     <script defer src="./js/main.js" type="module"></script>
+    <script defer src="./js/events.js" type="module"></script>
     <link  rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -32,7 +33,7 @@
                         <span>Velocity</span>
                         <input type="range"></input>
                     </div>
-                    <button><img src="./sources/random.svg"></button>
+                    <button id="btn-random"><img src="./sources/random.svg"></button>
                 </div>
             </div>
         </footer>
