--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
             <div id="container-2">
                 <div class="btn-container" id="btn-c-2">
                     <button id="play-pause">
-                        <svg class="icon"><use xlink:href="./icons/sprite.svg#play"></use></svg>
-                        <img src="./sources/play.svg" hidden>
-                        <img src="./sources/pause.svg">
+                        <svg class="icon" id="play-icon"><use xlink:href="./icons/sprite.svg#play"></use></svg>
                     </button>
-                    <button id="btn-next"><img src="./sources/next.svg"></button>
+                    <button id="btn-next">
+                        <svg class="icon" id="play-icon"><use xlink:href="./icons/sprite.svg#next"></use></svg>
+                    </button>
                     <div id="vel-dial">
                         <span>Speed</span>
                         <input type="range" id="speed" max="15" min="0" value="10"></input>
                     </div>
-                    <button id="btn-random"><img src="./sources/random.svg"></button>
+                    <button id="btn-random">
+                        <svg class="icon" id="play-icon"><use xlink:href="./icons/sprite.svg#random"></use></svg>
+                    </button>
                 </div>
             </div>
         </footer>
